--- a/glowna.css
+++ b/glowna.css
@@ -357,6 +357,52 @@ margin-top: 400px;
 	border-top: 3px solid #a7c9ff;
 	border-bottom: 3px solid #a7c9ff;
 	margin: 1em auto;
+	margin-top: 230px;
+	}
+}
+
+.DSC #inne span {
+    align-items: center;
+    text-shadow: rgba(26, 26, 26, 0.473) 1px 1px 2px;
+    display: block;
+	text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+}
+.DSC #inne{
+background: rgba(255, 255, 255, 0.534);
+box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.664);
+border-radius: 10px;
+display: block;
+position: relative;
+width: 50%;
+height: 10%;
+border-top: 3px solid #a7c9ff;
+border-bottom: 3px solid #a7c9ff;
+margin: 1em auto;
+margin-top: 400px;
+}
+
+@media (max-width: 1000px){
+    .DSC #inne span {
+        align-items: center;
+        text-shadow: rgba(26, 26, 26, 0.473) 1px 1px 2px;
+        display: block;
+        text-align: center;
+        font-size: 23px;
+        font-weight: bold;
+    }
+	.DSC #inne{
+	background: rgba(255, 255, 255, 0.534);
+	box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.664);
+	border-radius: 10px;
+	display: block;
+	position: relative;
+	width: 50%;
+	height: 10%;
+	border-top: 3px solid #a7c9ff;
+	border-bottom: 3px solid #a7c9ff;
+	margin: 1em auto;
 	margin-top: 300px;
 	}
 }
